--- a/1_Markov_Decision_Process.ipynb
+++ b/1_Markov_Decision_Process.ipynb
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 208,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -361,7 +361,7 @@
     "    else:\n",
     "        print('Invalid entry! Only H or T accepted')\n",
     "\n",
-    "face = 'H'\n",
+    "face = 'T'\n",
     "print(f'Outcome of coin flip: {flip_coin(face)[0]}')"
    ]
   },
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 219,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -389,7 +389,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "s_0:H\ts_1:H\ts_2:H\ts_3:H\ts_4:H\ts_5:T\ts_6:T\ts_7:H\ts_8:H\ts_9:T\t"
+      "s_0:H\ts_1:H\ts_2:H\ts_3:H\ts_4:H\ts_5:H\ts_6:T\ts_7:T\ts_8:T\ts_9:H\t"
      ]
     }
    ],
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 221,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 263,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -583,11 +583,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Win percentage in round 1: 59.63%\n",
-      "Win percentage in round 2: 59.63%\n",
-      "Win percentage in round 3: 59.63%\n",
-      "Win percentage in round 4: 59.63%\n",
-      "Win percentage in round 5: 59.63%\n"
+      "Win percentage in round 1: 60.32%\n",
+      "Win percentage in round 2: 59.41%\n",
+      "Win percentage in round 3: 59.09%\n",
+      "Win percentage in round 4: 60.24%\n",
+      "Win percentage in round 5: 60.98%\n"
      ]
     }
    ],
@@ -600,7 +600,7 @@
     "\n",
     "for k in range(num_rounds):\n",
     "    \n",
-    "    outcome = 'H' # or start with 'T'\n",
+    "    outcome = 'T' # or start with 'T'\n",
     "\n",
     "    for flip in range(num_flips):\n",
     "        outcome = flip_coin(outcome)[0]\n",
@@ -609,7 +609,7 @@
     "        result = 1 if outcome == 'H' else 0\n",
     "        store_results[flip, k] = result\n",
     "\n",
-    "    num_wins = np.sum(store_results, axis=0)[0]\n",
+    "    num_wins = np.sum(store_results, axis=0)[k]\n",
     "\n",
     "    win_percentage = num_wins*100/num_flips\n",
     "\n",
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 265,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -692,8 +692,8 @@
      "output_type": "stream",
      "text": [
       "Outcome of 1 flip: \n",
-      " [[0.8]\n",
-      " [0.2]]\n"
+      " [[0.3]\n",
+      " [0.7]]\n"
      ]
     }
    ],
@@ -702,7 +702,7 @@
     "transition_matrix = np.array([[0.8, 0.2],\n",
     "                              [0.3, 0.7]])\n",
     "\n",
-    "head = np.array([[1], [0]])\n",
+    "head = np.array([[0], [1]])\n",
     "# tail = np.array([[0], [1]]) # try this\n",
     "\n",
     "# 1 flip: transition @ head\n",
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 266,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
